# amgcl

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  MANIFEST.in  README.md  git_version.py  index.html  setup.py
.github/workflows/: conda-ci.yml  conda-release.yml
.travis/: install_boost.sh
amgcl/: aggr_connect.hpp  aggr_plain.hpp  aggregation.hpp  amg.hpp  amgcl.hpp  bicgstab.hpp  builder.hpp  cg.hpp  clock.hpp  common.hpp  cpu_level.hpp  deflated_solver.hpp  eigen_operations.hpp  gmres.hpp  interp.hpp  interp_aggr.hpp  interp_classic.hpp  interp_sa_emin.hpp  interp_smoothed_aggr.hpp  level_blaze.hpp  level_cpu.hpp  level_cuda.hpp  level_params.hpp  level_vexcl.hpp  level_viennacl.hpp  make_block_solver.hpp  make_preconditioner.hpp  make_solver.hpp  nullspace.hpp  operations_blaze.hpp  operations_cuda.hpp  operations_eigen.hpp  operations_ublas.hpp  operations_vexcl.hpp  operations_viennacl.hpp  params.hpp  profiler.hpp  runtime.hpp  solver.hpp  spai.hpp  (+5 more)
amgcl/adapter/: block_matrix.hpp  complex.hpp  crs_builder.hpp  crs_tuple.hpp  eigen.hpp  epetra.hpp  reorder.hpp  scaled_problem.hpp  ublas.hpp  zero_copy.hpp
amgcl/backend/: blaze.hpp  block_crs.hpp  builtin.hpp  builtin_hybrid.hpp  ccrs.hpp  crs_builder.hpp  crs_tuple.hpp  cuda.hpp  eigen.hpp  enable_complex.hpp  hip.hpp  hpx.hpp  interface.hpp  mkl.hpp  vexcl.hpp  vexcl_complex.hpp  vexcl_static_matrix.hpp  viennacl.hpp
amgcl/coarsening/: aggregation.hpp  as_scalar.hpp  classic.hpp  eamg.hpp  plain_aggregates.hpp  pointwise_aggregates.hpp  rigid_body_modes.hpp  ruge_stuben.hpp  runtime.hpp  smoothed_aggr_emin.hpp  smoothed_aggregation.hpp  tentative_prolongation.hpp
amgcl/detail/: gaussj.hpp  inverse.hpp  qr.hpp  sort_row.hpp  spectral_radius.hpp  spgemm.hpp
amgcl/io/: binary.hpp  ios_saver.hpp  mm.hpp
amgcl/mpi/: amg.hpp  cpr.hpp  (+17 more)
cmake/: CMakeLists.txt  FindMetis.cmake  FindOpenCL.cmake  FindPastix.cmake  FindScotch.cmake  amgcl-config.cmake.in
delphi/: amgcl.pas  solve.dpr
doc/: CMakeLists.txt  Doxyfile.cmake  gh.css  ref.bib
docker/: Dockerfile  Dockerfile-cuda10.2  Dockerfile-cuda11.8  Dockerfile-cuda12.0  Makefile  README.md
docs/: .gitignore  CMakeLists.txt  CoupCons3D.rst  Doxyfile  Nullspace.rst  NullspaceMPI.rst  Serena.rst  SerenaMPI.rst  Stokes.rst  adapters.rst  amg_overview.rst  backends.rst  benchmarks.rst  bibliography.rst  compiling.rst  components.rst  conf.py  custom_adapter.rst  deflation.rst  demidov-mu-wang-20.bib  demidov19.bib  demidov20.bib  design.rst  dmem_bench.rst  examples.rst  index.rst  mpi.rst  poisson.rst  poisson3Db.rst  poisson3DbMPI.rst  preconditioners.rst  requirements.txt  runtime.rst  smem_bench.rst  solvers.rst  tutorial.rst
docs/_static/: custom.css
docs/components/: adapters.rst  backends.rst  coarsening.rst  coupled_solvers.rst  iter_solvers.rst  itersolvers.rst  preconditioners.rst  relaxation.rst  solvers.rst  valuetypes.rst
docs/dmem_data/lrz/: amgcl_strong.txt  amgcl_weak.txt  ns_amgcl_amg.txt  ns_amgcl_sdd.txt  ns_trilinos.txt  trilinos_strong.txt  trilinos_weak.txt
docs/scaling/: weak_3d_cd_100_mpi.txt
docs/smem_data/nstokes/: amgcl-schur-cuda.txt  amgcl-schur.txt  amgcl-vexcl-cuda.txt  amgcl.txt  petsc.txt  trilinos.txt
docs/smem_data/poisson/: amgcl-cuda.txt  amgcl.txt  cusp.txt  petsc.txt  trilinos.txt
docs/tutorial/: CoupCons3D.rst  Nullspace.rst  NullspaceMPI.rst  Serena.rst  SerenaMPI.rst  Stokes.rst  poisson3Db.rst  poisson3DbMPI.rst
examples/: CMakeLists.txt  aggr.cpp  augmented_lagrangian.cpp  bin2mm.cpp  blaze.cpp  block_crs.cpp  block_poisson.cpp  call_lib.cpp  cpr.cpp  cpr_drs.cpp  cpr_mm.cpp  crs_builder.cpp  cuda.cu  custom_adapter.cpp  deflated_solver.cpp  eigen.cpp  eigen_mm.cpp  example_mkl.cpp  genproblem2d.cpp  genproblem3d.cpp  hpx.cpp  make_poisson.py  mixed_precision.cpp  mkl.cpp  mm2bin.cpp  mmplot.py  nonscalar.cpp  ns_search.cpp  owncg.cpp  pyamgcl_example.py  pyprecond.py  pysolver.py  read.hpp  relax_as_precond.cpp  runtime.cpp  runtime_vexcl.cpp  runtime_viennacl.cpp  schur_complement.cpp  schur_pressure_correction.cpp  schurpc_mixed.cpp  (+15 more)
examples/mpi/: CMakeLists.txt  call_mpi_lib.cpp  check_direct.cpp  check_pastix.cpp  cpr_mpi.cpp  deflated_cg.cpp  domain_partition.hpp  mba.hpp  mpi_amg.cpp  mpi_amg_mixed.cpp  mpi_complex.cpp  mpi_solver.cpp  partition.cpp  plot_result  runtime_bp.cpp  runtime_sdd.cpp  runtime_sdd_3d.cpp  runtime_sdd_vexcl.cpp  schur_pc_mpi.cpp  solve_mm_mpi.cpp  spmm_scaling.cpp  subdomain_deflation.cpp  subdomain_deflation_vexcl.cpp  test_spmm.cpp  test_transpose.cpp
fortran/: CMakeLists.txt  amgcl.f90  poisson.f90
lib/: CMakeLists.txt  amgcl.cpp  amgcl.h  amgcl_mpi.cpp  amgcl_mpi.h  dll.def  mpi_dll.def
pyamgcl/: CMakeLists.txt  __init__.py  numpy_boost.hpp  pyamgcl.cpp  pyamgcl.py  test_pyamgcl
python/: CMakeLists.txt  numpy_boost_python.hpp  pyamgcl.cpp  setup.py  test.py  test_pyamgcl
tests/: CMakeLists.txt  backend.cpp  backend_ccrs.cpp  backend_crs.cpp  backend_eigen.cpp  sample_problem.hpp  solver.cpp  test_backend.cpp  test_complex.cpp  test_complex_erf.cpp  test_eigen_solver.cpp  test_eigen_values.cpp  test_io.cpp  test_pyamgcl.py  test_qr.cpp  test_skyline_lu.cpp  test_solver.cpp  test_solver.hpp  test_solver_blaze.cpp  test_solver_block_crs.cpp  test_solver_builtin.cpp  test_solver_complex.cpp  test_solver_eigen.cpp  test_solver_ns_builtin.cpp  test_solver_ns_eigen.cpp  test_solver_vexcl.cpp  test_solver_viennacl.cpp  test_static_matrix.cpp
tutorial/: CMakeLists.txt
tutorial/1.poisson3Db/: CMakeLists.txt  partition.py  plot.py  plot_mpi.py  poisson3Db.cpp  poisson3Db_cuda.cu  poisson3Db_mpi.cpp  poisson3Db_mpi_vexcl.cpp  poisson3d.rst
tutorial/2.Serena/: CMakeLists.txt  plot.py  plot_mpi.py  serena.cpp  serena_mpi.cpp  serena_mpi_mixed.cpp  serena_mpi_vexcl.cpp  serena_vexcl.cpp
tutorial/3.CoupCons3D/: CMakeLists.txt  coupcons3d.cpp  coupcons3d_spc.cpp  coupcons3d_vexcl.cpp  plot.py
tutorial/5.Nullspace/: CMakeLists.txt  nullspace.cpp  nullspace_block.cpp  nullspace_hybrid.cpp  nullspace_mpi.cpp  plot.py  plot_coarse.py
(+117 files in other folders)
